--- a/voiceless_screaming/.settings/org.eclipse.wst.common.component
+++ b/voiceless_screaming/.settings/org.eclipse.wst.common.component
@@ -2,13 +2,9 @@
 	<wb-module deploy-name="ma_001-1.0.0-BUILD-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
 		<wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/java"/>
 		<property name="java-output-path" value="target/classes"/>
         <property name="context-root" value="ma_001"/>
-<<<<<<< HEAD
-        <property name="context-root" value="/"/>
-=======
->>>>>>> parent of ef05b17... 0401_이혁희
 	</wb-module>
 </project-modules>
